--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-toastify": "^10.0.4",
     "styled-components": "^6.1.1",
     "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
